--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "php": "^7.1|^8.0",
     "ext-json": "*",
     "guzzlehttp/guzzle": "^6.3|^7.0",
-    "tightenco/collect": "^5.5|^v6.18|^7.0"
+    "tightenco/collect": "^5.5|^v6.18|^7.0",
+    "ext-http": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0|^8.5.5|^9.0",
